Fixed flexbox on Firefox

--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -12,6 +12,7 @@
 	-webkit-flex-flow: row wrap;
 	display: -ms-flexbox;
 	-ms-flex-flow: row wrap;
+	display: flex;
 
 	[class *= "grid-unit"] {
 		display: inline-block;
